Adding gc and stub logging